--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -34,7 +34,7 @@
 }
 
 .forCode h2 {
-    font-family: "proxima_novasemibold",sans-serif !important;
+    /* font-family: "proxima_novasemibold",sans-serif !important; */
     text-align: center;
     width: 100% !important;
     margin-left: 15%;
@@ -78,7 +78,7 @@
 .butLeft button {
     background: #AB2656;
     border-radius: 3px;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -92,7 +92,7 @@
 
 .joinGroup h6 {
     text-align: center;
-    font-family:"proxima_novasemibold",sans-serif!important;
+    /* font-family:"proxima_novasemibold",sans-serif!important; */
     font-size: 16px;
     line-height: 24px;
     color: #444444;
@@ -135,7 +135,6 @@
 .forDetailsComp .upper {
     margin-bottom: 2px;
     font-weight: bold;
-    font-family:"proxima_novasemibold",sans-serif!important;
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.168px;
@@ -180,7 +179,7 @@
     padding-top: 10px;
     padding-bottom: 10px; 
     text-align: center;
-    font-family:"proxima_novasemibold",sans-serif!important;
+    /* font-family:"proxima_novasemibold",sans-serif!important; */
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
@@ -195,14 +194,14 @@
     background: #AB2656;
     border-radius: 3px;
     color: white;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     margin-bottom: 40px;
 }
 
 .sumComponent {
     display: flex;
     flex-wrap: nowrap;
-    font-family:'proxima_novasemibold', sans-serif !important;
+    /* font-family:'proxima_novasemibold', sans-serif !important; */
     background: linear-gradient(171.37deg, #FFFFFF 0%, rgba(195, 195, 195, 0.291752) 100%), linear-gradient(351.37deg, #7C5578 0%, #580637 100%);
     background-blend-mode: multiply, normal;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -266,7 +265,7 @@
 .forReadOnlyInput input {
     background-color: #F5F5F5;
     border-radius: 5px;
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 14px;
     border: none;
 }
@@ -280,7 +279,7 @@
     color: red;
     display: block;
     padding-top: 10px;
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 14px;
 }
 
@@ -347,7 +346,7 @@
     color: red;
     display: none;
     padding-top: 10px;
-    font-family:'proxima_novasemibold',sans-serif!important;
+    /* font-family:'proxima_novasemibold',sans-serif!important; */
     font-size: 14px;
 }
 .compContainer .eachComp {
@@ -379,7 +378,7 @@
 }
 
 .compContainer .eachComp .upper {
-    font-family: Proxima Nova;
+    /* font-family: Proxima Nova; */
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.168px;
@@ -388,7 +387,7 @@
 }
 
 .compContainer2 .eachComp2 .upper {
-    font-family: Proxima Nova;
+    /* font-family: Proxima Nova; */
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.168px;
@@ -397,7 +396,6 @@
 }
 
 .compContainer .eachComp .lower {
-    font-family: Proxima Nova;
     font-size: 10.4px;
     line-height: 12px;
     letter-spacing: 0.1248px;
@@ -405,7 +403,6 @@
 
 
 .compContainer2 .eachComp2 .lower {
-    font-family: Proxima Nova;
     font-size: 10.4px;
     line-height: 12px;
     letter-spacing: 0.1248px;
@@ -415,7 +412,6 @@
     padding-top: 30px;
     padding-bottom: 20px;
     text-align: center;
-    font-family: Proxima Nova;
     font-size: 12px;
     line-height: 14px;
     color: #444444;
@@ -447,7 +443,7 @@
   color: #A90836;
   width: 100%;
   margin-bottom: 0px;
-  font-family:'proxima_novasemibold',sans-serif !important;
+  /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 8px;
     line-height: 10px;
     padding-bottom: 5px;
@@ -457,7 +453,7 @@
 }
 
 .topCard .left .bottom {
-font-family:'proxima_novasemibold',sans-serif !important;
+/* font-family:'proxima_novasemibold',sans-serif !important; */
 font-size: 12px;
 line-height: 14px;
 color: #4D4D4D;
@@ -489,7 +485,7 @@ font-weight: bold;
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
 }
 
 .bottomDiscriptionDashBoard .left p {
@@ -516,7 +512,7 @@ font-weight: bold;
 }
 
 .bottomDiscriptionDashBoard .left #date {
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 10px;
     line-height: 12px;
     letter-spacing: 0.96px;
@@ -529,7 +525,7 @@ font-weight: bold;
     position: absolute;
     left: 250px;
     top: 60px;
-    font-family: Proxima Nova;
+    /* font-family: Proxima Nova; */
     font-size: 12px;
     line-height: 14px;
     color: #AB2656;
@@ -537,7 +533,7 @@ font-weight: bold;
 }
 
 .bottomDiscriptionDashBoard .left #message {
-    font-family: Proxima Nova;
+    /* font-family: Proxima Nova; */
     font-size: 10px;
     line-height: 12px;
     color: #000000;
@@ -563,7 +559,7 @@ font-weight: bold;
    top: 170px;
    padding-left: 15px;
    padding-right: 15px;
-   font-family:'proxima_novasemibold',sans-serif !important;
+   /* font-family:'proxima_novasemibold',sans-serif !important; */
 
 }
 
@@ -577,14 +573,14 @@ font-weight: bold;
 
 .bottomDisCriptionTray .left p:first-child {
     margin-bottom: 0px;
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 14px;
     line-height: 17px;
     color: #4D4D4D;
 }
 
 .bottomDisCriptionTray .left p:last-child {
-    font-family:"proxima_novaregular", sans-serif !important;
+    /* font-family:"proxima_novaregular", sans-serif !important; */
     font-size: 10.4px;
     color: #878686
 }
@@ -592,7 +588,7 @@ font-weight: bold;
 .bottomDisCriptionTray .right p {
     text-align: right;
     font-weight: bold;
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 12px;
     line-height: 14px;
     color: #AB2656;
@@ -602,7 +598,7 @@ font-weight: bold;
 .butRight button {
     background-color: transparent;
     border-radius: 3px;
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -653,7 +649,7 @@ font-weight: bold;
 
 .firstSubHead p:nth-child(1) {
     padding-top: 20px;
-    font-family:"proxima_novasemibold" !important;
+    /* font-family:"proxima_novasemibold" !important; */
     font-size: 8px;
     line-height: 10px;
     text-align: center;
@@ -662,7 +658,7 @@ font-weight: bold;
 }
 
 .firstSubHead p:nth-child(2) {
-    font-family: "proxima_novasemibold", sans-serif !important;
+    /* font-family: "proxima_novasemibold", sans-serif !important; */
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -671,7 +667,7 @@ font-weight: bold;
 }
 
 .firstSubHead p:nth-child(3) {
-    font-family: "proxima_novasemibold", sans-serif !important;
+    /* font-family: "proxima_novasemibold", sans-serif !important; */
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -704,14 +700,14 @@ font-weight: bold;
 }
 
 .topDiscription .left p {
-    font-family:"proxima_novasemibold" ,sans-serif !important;
+    /* font-family:"proxima_novasemibold" ,sans-serif !important; */
     font-size: 8px;
     line-height: 10px;
     color: #A90836;
 }
 
 .topDiscription .right p {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
   font-size: 10px;
   line-height: 12px;
   text-align: right;
@@ -725,7 +721,7 @@ font-weight: bold;
 }
 
 .bottomDiscription .left p:nth-child(1) {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 10px;
     line-height: 14px;
     color: #4D4D4D;
@@ -734,7 +730,7 @@ font-weight: bold;
 .bottomDiscription .left p {
     color: #4D4D4D;
     font-size: 12px;
-    font-family:"proxima_novaregular",sans-serif !important;
+    /* font-family:"proxima_novaregular",sans-serif !important; */
 }
 
 .bottomDiscription .right p:nth-child(1) {
@@ -764,7 +760,7 @@ font-weight: bold;
     width: 100%;
     background: #AB2656;
     border-radius: 3px;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -788,7 +784,7 @@ font-weight: bold;
     padding-top: 20px;
     font-size: 12px;
     color: #444444;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     margin-left: 0 !important;
     margin-right:0 !important;
     
@@ -840,7 +836,7 @@ font-weight: bold;
 }
 
 .moreDetails .left p:first-child, .moreDetails .right p:first-child, .moreDetails .middle p:first-child {
-font-family:"proxima_novasemibold",sans-serif !important;
+/* font-family:"proxima_novasemibold",sans-serif !important; */
 font-size: 14px;
 line-height: 17px;
 
@@ -850,13 +846,13 @@ color: #4D4D4D;
 }
 
 .moreDetails .left p:last-child, .moreDetails .right p:last-child, .moreDetails .middle p:last-child {
-    font-family:"proxima_novaregular",sans-serif !important;
+    /* font-family:"proxima_novaregular",sans-serif !important; */
     font-size: 11px;
     color: #878686;
     }
 
 .butProgBar {
-    font-family:"proxima_novaregular",sans-serif !important;
+    /* font-family:"proxima_novaregular",sans-serif !important; */
     font-size: 10px !important; 
     color: #717171 !important;
 }
@@ -910,7 +906,7 @@ color: #4D4D4D;
 }
 
 .listedItems p:first-child {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 14px;
     line-height: 17px;
     color: #FFFFFF;
@@ -949,21 +945,21 @@ color: #4D4D4D;
 }
 
 .listedItems p:last-child {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 12px;
     line-height: 14px;
     color: #9C9C9C;
 }
 
 .listedItemMembers .left p {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 14px;
     line-height: 17px;
     color: #444444;
 }
 
 .listedItemMembers .right  p:first-child {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 14px;
     line-height: 17px;
     text-align: right;
@@ -980,7 +976,7 @@ color: #4D4D4D;
 #manageButton {
     margin-top: 30px;
     color: #444444;
-    font-family:"proxima_novasemibold",sans-serif !important ;
+    /* font-family:"proxima_novasemibold",sans-serif !important ; */
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -992,7 +988,7 @@ color: #4D4D4D;
     text-align: center;
     margin-top: 70px;
     margin-bottom: 30px;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 16px;
     line-height: 24px;
     text-align: center;
@@ -1021,12 +1017,12 @@ color: #4D4D4D;
 
 #autoSummary .right p:first-child { 
     padding-top: 25px;
-    font-family: "proxima_novaregular",sans-serif !important;
+    /* font-family: "proxima_novaregular",sans-serif !important; */
 }
 
 #autoSummary .left p:first-child { 
     padding-top: 20px;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
 
 }
 
@@ -1039,7 +1035,7 @@ color: #4D4D4D;
     justify-content: center;
     margin: auto;
     margin-left: 20%;
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 20px;
     line-height: 24px;
     text-align: center;
@@ -1072,7 +1068,7 @@ color: #4D4D4D;
 
 #firstPoint{
 
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 8px;
     line-height: 10px;
     text-transform: uppercase;
@@ -1084,7 +1080,7 @@ color: #4D4D4D;
 
 
 #secondPoint {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 14px;
     line-height: 17px;
     color: #4D4D4D;
@@ -1092,7 +1088,7 @@ color: #4D4D4D;
 }
 
 #thirdPoint {
-    font-family:"proxima_novasemibold",sans-serif !important;
+    /* font-family:"proxima_novasemibold",sans-serif !important; */
     font-size: 10px;
     line-height: 12px;
     color: #717171;
@@ -1132,7 +1128,7 @@ color: #4D4D4D;
 }
 
 .perc {
-    font-family:'proxima_novasemibold',sans-serif !important;
+    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 12px !important;
     text-transform: lowercase !important;
 }
