--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -34,7 +34,6 @@
 }
 
 .forCode h2 {
-    /* font-family: "proxima_novasemibold",sans-serif !important; */
     text-align: center;
     width: 100% !important;
     margin-left: 15%;
@@ -78,7 +77,7 @@
 .butLeft button {
     background: #AB2656;
     border-radius: 3px;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -92,7 +91,6 @@
 
 .joinGroup h6 {
     text-align: center;
-    /* font-family:"proxima_novasemibold",sans-serif!important; */
     font-size: 16px;
     line-height: 24px;
     color: #444444;
@@ -179,7 +177,6 @@
     padding-top: 10px;
     padding-bottom: 10px; 
     text-align: center;
-    /* font-family:"proxima_novasemibold",sans-serif!important; */
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
@@ -194,14 +191,13 @@
     background: #AB2656;
     border-radius: 3px;
     color: white;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     margin-bottom: 40px;
 }
 
 .sumComponent {
     display: flex;
     flex-wrap: nowrap;
-    /* font-family:'proxima_novasemibold', sans-serif !important; */
     background: linear-gradient(171.37deg, #FFFFFF 0%, rgba(195, 195, 195, 0.291752) 100%), linear-gradient(351.37deg, #7C5578 0%, #580637 100%);
     background-blend-mode: multiply, normal;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -265,7 +261,6 @@
 .forReadOnlyInput input {
     background-color: #F5F5F5;
     border-radius: 5px;
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 14px;
     border: none;
 }
@@ -279,7 +274,6 @@
     color: red;
     display: block;
     padding-top: 10px;
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 14px;
 }
 
@@ -346,7 +340,6 @@
     color: red;
     display: none;
     padding-top: 10px;
-    /* font-family:'proxima_novasemibold',sans-serif!important; */
     font-size: 14px;
 }
 .compContainer .eachComp {
@@ -378,7 +371,6 @@
 }
 
 .compContainer .eachComp .upper {
-    /* font-family: Proxima Nova; */
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.168px;
@@ -387,7 +379,6 @@
 }
 
 .compContainer2 .eachComp2 .upper {
-    /* font-family: Proxima Nova; */
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.168px;
@@ -443,17 +434,14 @@
   color: #A90836;
   width: 100%;
   margin-bottom: 0px;
-  /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 8px;
     line-height: 10px;
     padding-bottom: 5px;
     padding-top: 20px;
     font-weight: bold;
-/* text-transform: uppercase !important; */
 }
 
 .topCard .left .bottom {
-/* font-family:'proxima_novasemibold',sans-serif !important; */
 font-size: 12px;
 line-height: 14px;
 color: #4D4D4D;
@@ -485,7 +473,6 @@ font-weight: bold;
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
 }
 
 .bottomDiscriptionDashBoard .left p {
@@ -512,7 +499,6 @@ font-weight: bold;
 }
 
 .bottomDiscriptionDashBoard .left #date {
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 10px;
     line-height: 12px;
     letter-spacing: 0.96px;
@@ -525,7 +511,6 @@ font-weight: bold;
     position: absolute;
     left: 250px;
     top: 60px;
-    /* font-family: Proxima Nova; */
     font-size: 12px;
     line-height: 14px;
     color: #AB2656;
@@ -533,7 +518,6 @@ font-weight: bold;
 }
 
 .bottomDiscriptionDashBoard .left #message {
-    /* font-family: Proxima Nova; */
     font-size: 10px;
     line-height: 12px;
     color: #000000;
@@ -559,7 +543,6 @@ font-weight: bold;
    top: 170px;
    padding-left: 15px;
    padding-right: 15px;
-   /* font-family:'proxima_novasemibold',sans-serif !important; */
 
 }
 
@@ -573,14 +556,12 @@ font-weight: bold;
 
 .bottomDisCriptionTray .left p:first-child {
     margin-bottom: 0px;
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 14px;
     line-height: 17px;
     color: #4D4D4D;
 }
 
 .bottomDisCriptionTray .left p:last-child {
-    /* font-family:"proxima_novaregular", sans-serif !important; */
     font-size: 10.4px;
     color: #878686
 }
@@ -588,7 +569,6 @@ font-weight: bold;
 .bottomDisCriptionTray .right p {
     text-align: right;
     font-weight: bold;
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 12px;
     line-height: 14px;
     color: #AB2656;
@@ -598,7 +578,6 @@ font-weight: bold;
 .butRight button {
     background-color: transparent;
     border-radius: 3px;
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -649,7 +628,6 @@ font-weight: bold;
 
 .firstSubHead p:nth-child(1) {
     padding-top: 20px;
-    /* font-family:"proxima_novasemibold" !important; */
     font-size: 8px;
     line-height: 10px;
     text-align: center;
@@ -658,7 +636,7 @@ font-weight: bold;
 }
 
 .firstSubHead p:nth-child(2) {
-    /* font-family: "proxima_novasemibold", sans-serif !important; */
+    
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -667,7 +645,6 @@ font-weight: bold;
 }
 
 .firstSubHead p:nth-child(3) {
-    /* font-family: "proxima_novasemibold", sans-serif !important; */
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -678,8 +655,6 @@ font-weight: bold;
     margin-left: 20%;
 }
 
-.row {
-}
 
 .topDiscription {
     margin-top: 40px;
@@ -700,14 +675,14 @@ font-weight: bold;
 }
 
 .topDiscription .left p {
-    /* font-family:"proxima_novasemibold" ,sans-serif !important; */
+    /*  */
     font-size: 8px;
     line-height: 10px;
     color: #A90836;
 }
 
 .topDiscription .right p {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
   font-size: 10px;
   line-height: 12px;
   text-align: right;
@@ -721,7 +696,7 @@ font-weight: bold;
 }
 
 .bottomDiscription .left p:nth-child(1) {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 10px;
     line-height: 14px;
     color: #4D4D4D;
@@ -730,7 +705,6 @@ font-weight: bold;
 .bottomDiscription .left p {
     color: #4D4D4D;
     font-size: 12px;
-    /* font-family:"proxima_novaregular",sans-serif !important; */
 }
 
 .bottomDiscription .right p:nth-child(1) {
@@ -760,7 +734,7 @@ font-weight: bold;
     width: 100%;
     background: #AB2656;
     border-radius: 3px;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -784,7 +758,7 @@ font-weight: bold;
     padding-top: 20px;
     font-size: 12px;
     color: #444444;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     margin-left: 0 !important;
     margin-right:0 !important;
     
@@ -836,7 +810,7 @@ font-weight: bold;
 }
 
 .moreDetails .left p:first-child, .moreDetails .right p:first-child, .moreDetails .middle p:first-child {
-/* font-family:"proxima_novasemibold",sans-serif !important; */
+/*  */
 font-size: 14px;
 line-height: 17px;
 
@@ -846,13 +820,11 @@ color: #4D4D4D;
 }
 
 .moreDetails .left p:last-child, .moreDetails .right p:last-child, .moreDetails .middle p:last-child {
-    /* font-family:"proxima_novaregular",sans-serif !important; */
     font-size: 11px;
     color: #878686;
     }
 
 .butProgBar {
-    /* font-family:"proxima_novaregular",sans-serif !important; */
     font-size: 10px !important; 
     color: #717171 !important;
 }
@@ -906,7 +878,7 @@ color: #4D4D4D;
 }
 
 .listedItems p:first-child {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 14px;
     line-height: 17px;
     color: #FFFFFF;
@@ -945,21 +917,21 @@ color: #4D4D4D;
 }
 
 .listedItems p:last-child {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 12px;
     line-height: 14px;
     color: #9C9C9C;
 }
 
 .listedItemMembers .left p {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 14px;
     line-height: 17px;
     color: #444444;
 }
 
 .listedItemMembers .right  p:first-child {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 14px;
     line-height: 17px;
     text-align: right;
@@ -976,7 +948,6 @@ color: #4D4D4D;
 #manageButton {
     margin-top: 30px;
     color: #444444;
-    /* font-family:"proxima_novasemibold",sans-serif !important ; */
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -988,7 +959,7 @@ color: #4D4D4D;
     text-align: center;
     margin-top: 70px;
     margin-bottom: 30px;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 16px;
     line-height: 24px;
     text-align: center;
@@ -1017,12 +988,11 @@ color: #4D4D4D;
 
 #autoSummary .right p:first-child { 
     padding-top: 25px;
-    /* font-family: "proxima_novaregular",sans-serif !important; */
 }
 
 #autoSummary .left p:first-child { 
     padding-top: 20px;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
 
 }
 
@@ -1035,7 +1005,7 @@ color: #4D4D4D;
     justify-content: center;
     margin: auto;
     margin-left: 20%;
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 20px;
     line-height: 24px;
     text-align: center;
@@ -1068,7 +1038,7 @@ color: #4D4D4D;
 
 #firstPoint{
 
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 8px;
     line-height: 10px;
     text-transform: uppercase;
@@ -1080,7 +1050,7 @@ color: #4D4D4D;
 
 
 #secondPoint {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 14px;
     line-height: 17px;
     color: #4D4D4D;
@@ -1088,7 +1058,7 @@ color: #4D4D4D;
 }
 
 #thirdPoint {
-    /* font-family:"proxima_novasemibold",sans-serif !important; */
+    /*  */
     font-size: 10px;
     line-height: 12px;
     color: #717171;
@@ -1128,7 +1098,6 @@ color: #4D4D4D;
 }
 
 .perc {
-    /* font-family:'proxima_novasemibold',sans-serif !important; */
     font-size: 12px !important;
     text-transform: lowercase !important;
 }
