--- a/src/assets/css/loan.css
+++ b/src/assets/css/loan.css
@@ -2,6 +2,7 @@
 
 .fund-option-ctn.loan{
     display: flex !important;
+    /* flex-wrap: wrap; */
 }
 
 .fund-option.loan{
@@ -185,4 +186,15 @@ background-color: #D8D8D8;
   background-color: #9F083E;
   min-height: 10px;
   border-radius: 5px;
+}
+@media screen and (max-width: 767px) {
+  .fund-option.loan{
+    flex: 0 0 100%;
+    margin: 0;
+    margin-bottom: 20px;
+  }
+  .fund-option-ctn.loan{
+    flex-wrap: wrap;
+    padding: 50px 30px;
+  }
 }
