--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -268,7 +268,7 @@ select {
   padding: 0;
   width: 6em;
   height: 6em;
-  background-color: #E2E2E2;
+  background-color: #9D0F3E;
   border-radius: 50%;
   line-height: 6em; }
 
@@ -319,7 +319,8 @@ select {
   width: 6em;
   height: 6em;
   border-radius: 50%;
-  border: 0.45em solid #9D0F3E;
+  /* border: 0.45em solid #9D0F3E; */
+  border: 0.45em solid #53777A;
   /*The border is 0.35 but making it larger removes visual artifacts */
   /*background-color: #4D642D;*/
   /* for debug */
@@ -333,6 +334,7 @@ select {
   /*needed for clipping*/
   clip: rect(0, 5em, 5em, 2.5em);
   background-color: #53777A;
+  /* background-color: #9D0F3E; */
   border-radius: 50%;
   width: 5em;
   height: 5em; }
