--- a/src/assets/css/loan.css
+++ b/src/assets/css/loan.css
@@ -118,6 +118,12 @@ max-width: 40%;
   .dsh-left {
     width: 40%;
   }
+  .dsh-left .btn-alat{
+    width: 100%;
+  }
+  .dsh-left .btn-alat, .dsh-left input[type="submit"].btn-block, .dsh-left input[type="reset"].btn-block, .dsh-left input[type="button"].btn-block{
+    margin-bottom: 10px;
+  }
 
   .dsh-right{
       width : 60%;
@@ -196,5 +202,36 @@ background-color: #D8D8D8;
   .fund-option-ctn.loan{
     flex-wrap: wrap;
     padding: 50px 30px;
+  }
+  
+  
+}
+@media screen and (max-width: 768px){
+  .loan-dsh-ctn{
+    flex-wrap: wrap;
+  }
+  .dsh-left input[type="submit"].btn-block, .dsh-left input[type="reset"].btn-block, .dsh-left input[type="button"].btn-block{
+    width: unset;
+  }
+  .dsh-right, .dsh-left{
+    width: 100%;
+  }
+  .dsh-left .btn-alat{
+    width: unset;
+    margin: 0 auto;
+    display: block;
+  }
+}
+@media screen and (max-width: 374px){
+  .shd-amt{
+    display: block;
+    border-bottom: 0.8px solid rgb(241, 241, 241);
+  }
+  .shd-box.seg > .shd-amt>div{
+    margin-bottom: 10px;
+  }
+  .shd-box.seg > .shd-amt>div:first-of-type{
+    padding-bottom: 10px;
+    border-bottom: 0.8px solid rgb(241, 241, 241);
   }
 }
