--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -11,8 +11,8 @@
    background: #9D0F3E;
    border: 0.95px solid #FFF4F4;
    box-sizing: border-box;
-   width: 300px;
-   height: 250px;
+   /* width: 300px;
+   height: 250px; */
    margin-left:10px;
    margin-right:10px;
 }
@@ -44,6 +44,13 @@
 
 .checkSome{
  justify-content: center;
+}
+.checkSome>.row>.choosegoalwrap{
+    width: 90%;
+    margin: 0 auto;
+}
+.checkSome>.row>.choosegoalwrap>a{
+    flex: 1 1 0;
 }
 .flex-text{
    font-weight: bold;
@@ -94,8 +101,8 @@
    background: #ffffff;
    border: 0.95px solid #FFF4F4;
    box-sizing: border-box;
-   width: 300px;
-   height: 250px;
+   /* width: 300px;
+   height: 250px; */
    margin-left:10px;
    margin-right:10px;
 }
@@ -118,8 +125,8 @@
    box-shadow: 0px 8px 24px rgba(185, 185, 185, 0.162138);
    border: 0.95px solid #FFF4F4;
    box-sizing: border-box;
-   width: 300px;
-   height: 250px;
+   /* width: 300px;
+   height: 250px; */
    margin-left:10px;
    margin-right:10px;
 }
