--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -5,6 +5,10 @@
     padding-bottom: 40px;
 }
 
+.codeEnteredNotValid {
+    border: 1px solid #A90836 !important;
+}
+
 .accountSelection {
     width: 100%;
     padding-left: 6%;
