--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -373,9 +373,6 @@ border: 1px solid #ddd;
     cursor:pointer
 
 }
-
-
-
 @media screen and (max-width: 1023px){
   .header-info, .form-row, .form-group{
       padding: 0 25px;
@@ -385,46 +382,90 @@ border: 1px solid #ddd;
   }
 }
 
-#selectionCover {
-    margin-top:23;
-    margin-left:0;
-    justify-content:space-between;
-    /* border: "1px solid #CCCCCC" !important; */
-}
-
-#selectionCover .innerCover {
-    padding-right: 30;
-}
-
-#selectionCover #adultTag {
-    margin-left: -13
-}
-
-#selectionCover .adultDiscription {
-    border:1px solid #CCCCCC;
-    border-radius: 3;
-    flex-direction: row;
-    justify-content:space-between;
-} 
-.showTicket{
-    margin-right: 69px;
-    margin-left: 69px;
-    margin-top: 37px
+.row .count-border{
+  border: 1px solid #CCCCCC;
+  border-radius: 3px;
+  flex-direction: row;
+  justify-content: space-between
 
 }
-.student{
-    margin-left: -13px
+.row .btn-corner{
+  justify-content:center;
+  margin-top: 23px;
+  margin-bottom: 39px
+}
+.child-text{
+   margin-left: -13px
+}
+.col-sm-4 .innerCover{
+  padding-right: 30px
+}
+.row .selectionCover{
+  margin-top:23px;
+  margin-left:0;
+  justify-content:space-between
+}
+
+ #showTicket{
+  margin-right: 69px;
+  margin-left: 69px;
+  margin-top: 37px;
+
+}
+#tickettext{
+  font-size: 26px;
+  color: #444444;
+  padding-left: 55px
 
 }
 .ticket-title{
-    font-size:12px
-
+   margin-bottom: 21px
 }
 
+#goto{
+  margin-left: 50px;
+  margin-top: 20p;
+  margin-right: 50px
 
-
-
-
+}
+#padding-left{
+  padding-left: 30px;
+}
+.locationText{
+  font-size: 12px;
+  color: #9C9C9C
+}
+#title{
+  font-size: 26px;
+  color:#444444;
+  padding-left: 55px
+}
+#originalImage{
+  justify-content:center;
+  margin-bottom:15px
+}
+.qty{
+  font-size:12px;
+}
+#image{
+   justify-content:center;
+   margin-bottom:15px
+}
+#eventticket{
+  margin-left: 50px;
+  margin-top: 20px;
+  margin-right: 50px;
+}
+#select-day{
+  margin-top: 16px
+}
+#col{
+      margin-top: 23px,
+}
+.pad{
+  margin-top: 10px
+  
+}
 
 
 
