--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -466,6 +466,18 @@ border: 1px solid #ddd;
   margin-top: 10px
   
 }
+.event-border{
+  border: 1px solid rgba(205, 205, 205, 0.32)
+}
+.margin-bottom{
+  margin-bottom: 21px;
+}
+.ShowBuyTicketData{
+  width:100%
+}
+#movie-tab{
+  margin-bottom: 10px
+}
 
 
 
