--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -43,7 +43,7 @@
    color: #444444;
    font-size: 13px;
    margin-bottom: 2px;
-   height: 15%;
+   font-weight: 600
 }
 
 .eventCards .details .right p {
@@ -477,6 +477,48 @@ border: 1px solid #ddd;
 }
 #movie-tab{
   margin-bottom: 10px
+}
+.inputList{
+  float:right;
+  margin-top:-31;
+  width:181px
+}
+.inputLabel{
+  margin-bottom:0;
+  color:#666666;
+  font-size:14px
+
+}
+.SearchInput{
+  width:100%;
+  height:40px;
+  margin-top:4px;
+  float:right;
+  
+
+
+}
+.ResultInput{
+  width:100%;
+  height:42px;
+  margin-top:8px;
+  margin:4px;
+  float:right;
+  
+
+}
+.listInput{
+  float:right;
+  margin-top:-31
+}
+.eventWrapper{
+  position:absolute;
+  top:40px;
+  right:15px;
+}
+ .eventWrap{
+  position: relative;
+
 }
 
 
