added api integration to ratings

--- a/src/components/ratings/ratings.scss
+++ b/src/components/ratings/ratings.scss
@@ -37,6 +37,10 @@ body{
         font-size: 14px;
     }
 }
+.ratings-container {
+    width: 80%;
+    margin: 0 auto;
+}
 .rating {
     // unicode-bidi: bidi-override;
     // direction: rtl;
