Completed ratings integration, resolved card request issues

--- a/src/components/ratings/ratings.scss
+++ b/src/components/ratings/ratings.scss
@@ -37,6 +37,15 @@ body{
         font-size: 14px;
     }
 }
+.success-heading{
+    color: #AB2656;
+}
+.success-mg{
+    margin-top: 10px;
+    span{
+        font-weight: 600;
+    }
+}
 .ratings-container {
     width: 80%;
     margin: 0 auto;
