--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -258,6 +258,7 @@
       box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
       border-radius: 3px;
       text-decoration: none;
+      margin-bottom: 15px;
 
   }
   .btn-top-up-goal{
