--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -774,7 +774,7 @@ font-weight: bold;
 .navRight p {
     text-align: right;
     cursor: pointer;
-    margin-left:170px;
+    /* margin-left:170px; */
     
 
 }
