--- a/src/components/offline-loan/offlineloans.scss
+++ b/src/components/offline-loan/offlineloans.scss
@@ -3,10 +3,10 @@ body{
     background: #FBFCFC;
 }
 .offlineloan-wrap{
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 14px 34px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
     padding: 30px 30px;
     background: #fff;
-    border-radius: 4px;
     margin-bottom: 20px;
     hr {
         margin-top: 1rem;
@@ -23,6 +23,67 @@ body{
     margin: 0 auto;
     height: 100vh;
     padding-top: 130px;
+}
+.amount-wrap{
+    margin-bottom: 20px;
+    position: relative;
+    .input-ctn {
+        margin-bottom: 7px;
+        input{
+            border-radius: 5px!important;
+            position: relative;
+            padding-left: 24px;
+        }
+    }
+    .currencyicon{
+        position: absolute;
+        top: 36px;
+        font-size: 15px;
+        left: 10px;
+        &::before{
+            content: "\20A6";
+            display: block;
+            // position: absolute;
+            // width: 100%;
+            // height: 100%;
+            // top: 0;
+            // bottom: 0;
+            // position: ;
+        }
+    }
+}
+.terms-txt{
+    font-weight: 600;
+    span{
+        color: #AB2656;
+        margin-left: 6px;
+        &:hover{
+            cursor: pointer;
+        }
+    }
+}
+.cta-wrap {
+    display: flex;
+    justify-content: space-around;
+    button{
+        flex-grow: 1;
+        flex-basis: 0;
+        min-width: unset;
+        border-radius: 5px!important;
+        font-weight: 600;
+        font-size: 16px;
+        &:first-of-type{
+            margin-right: 10px;
+        }
+        &:nth-of-type(2){
+            margin-left: 10px;
+        }
+    }
+    .decline-btn, .decline-btn:hover{
+        border: 1px solid #AB2656;
+        background: none;
+        color: #AB2656;
+    }
 }
 .heading-icon {
     text-align: center;
@@ -50,6 +111,29 @@ body{
 .offlineloan-container {
     width: 80%;
     margin: 0 auto;
+    &.p-20{
+        width: 90%;
+    }
+    
+    h3.termsheading {
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+    .termswrap h4 {
+        margin: 10px 0;
+    }
+    .termswrap span {
+        font-weight: bold;
+        display: block;
+    }
+    .termscta-wrap {
+        text-align: center;
+        button{
+            width: 10%;
+            margin: 0 auto;
+        }
+        
+    }
 }
 .rating {
     // unicode-bidi: bidi-override;
@@ -139,13 +223,19 @@ body{
         font-weight: 800;
     }
 }
+h3.text-center.loanheader {
+    margin-bottom: 29px;
+    font-size: 33px;
+    font-weight: 300;
+}
 
 @media (max-width: 768px){
     .offlineloan-container {
         width: 95%;
         margin: 0 auto;
+        padding: 0 10px;
     }
-    .alat-rating-wrap {
+    .offline-loan-wrap {
         width: 95%;
         margin: 0 auto;
     }
@@ -154,5 +244,13 @@ body{
     }
     .rating label{
         font-size: 1.7rem;
+    }
+    button.btn-alat{
+        padding:8px 20px;
+    }
+}
+@media (max-width: 375px){
+    button.btn-alat{
+       padding: 8px 10px;
     }
 }
