Added fixes for number amount formatting

--- a/src/components/onboarding/onboarding.scss
+++ b/src/components/onboarding/onboarding.scss
@@ -24,6 +24,9 @@
   cursor: not-allowed;
 }
 .forgotpw-link{
+  &.error-msg{
+    font-size: 12px;
+  }
   &:hover{
     cursor: pointer;
     text-decoration: underline;
