--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -1194,7 +1194,8 @@ ul.menu-side {
       .account-card .account-name p span {
         float: right;
         text-transform: none;
-        margin-top: -2px; }
+        margin-top: -2px;
+      color:white }
   .account-card .account-no-status {
     padding: 20px 30px 15px; }
     .account-card .account-no-status .account-no {
